[gd_scene load_steps=6 format=3 uid="uid://c27ik08huxew1"]

[ext_resource type="Script" path="res://Scenes/Enemies/Fishes/FishSpawn.gd" id="1_7lq7t"]

[sub_resource type="Curve2D" id="Curve2D_3eh5s"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 200, 0, 0, 0, 0, 300, 200, 0, 0, 0, 0, 300, 0, 0, 0, 0, 0, 0, 0)
}
point_count = 5

[sub_resource type="Gradient" id="Gradient_s7hmj"]
offsets = PackedFloat32Array(0, 0.993548)
colors = PackedColorArray(0.0431373, 0.517647, 0.607843, 1, 0.617255, 0.807059, 0.843137, 1)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_30r0s"]
gradient = SubResource("Gradient_s7hmj")

[sub_resource type="CircleShape2D" id="CircleShape2D_fm48w"]
radius = 184.614

[node name="FishSpawn" type="Node2D"]
y_sort_enabled = true
script = ExtResource("1_7lq7t")

[node name="Path2D" type="Path2D" parent="."]
curve = SubResource("Curve2D_3eh5s")

[node name="PathFollow2D" type="PathFollow2D" parent="Path2D"]
rotation = 1.5708

[node name="FishTimer" type="Timer" parent="."]
unique_name_in_owner = true

[node name="TextureRect" type="TextureRect" parent="."]
visible = false
offset_left = 2.0
offset_top = -1.0
offset_right = 302.0
offset_bottom = 199.0
texture = SubResource("GradientTexture1D_30r0s")

[node name="FishHome" type="Area2D" parent="."]
position = Vector2(149, 100)
collision_layer = 128
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="FishHome"]
shape = SubResource("CircleShape2D_fm48w")

[node name="Fishes" type="Node" parent="."]

[connection signal="timeout" from="FishTimer" to="." method="_on_FishTimer_timeout"]
